# convertix

./: .dockerignore  .gitignore  README.md
.github/workflows/: deploy-image-engine.yml  deploy-prod.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/licensing/: config.json  gates.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: fs.rs  jobs.rs  licensing.rs  local_processor.rs  mod.rs  offline.rs  pdf_engine.rs  system.rs
apps/desktop/src-tauri/src/licensing/: activation.rs  credits.rs  errors.rs  feature_gates.rs  license.rs  mod.rs  security.rs  sync.rs  tier.rs  usage.rs
apps/desktop/src-tauri/src/pdf_engine/: audit.rs  config.rs  errors.rs  jobs.rs  mod.rs  orchestrator.rs  validation.rs
apps/desktop/src-tauri/src/pdf_engine/adapters/: ghostscript.rs  mod.rs  pdfcpu.rs  qpdf.rs
apps/desktop/src-tauri/src/pdf_engine/models/: job.rs  mod.rs  result.rs
apps/desktop/src-tauri/src/security/: allowlist.rs
apps/desktop/src-tauri/src/services/: cache.rs  job_queue.rs  local_processor.rs  mod.rs  network.rs
apps/desktop/src-tauri/src/state/: app_state.rs
apps/web/: next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: deploy-prod.sh  dev.sh  install-pdfcpu.sh  lint-shell.sh  predeploy.sh  smoke-conversions.sh  smoke-image-labs.sh  smoke.sh  stop.sh
services/api/: Dockerfile  PdfEditor.Api.csproj  Program.cs
services/image-engine/: Dockerfile  health.js  index.js  package.json  (+1 more)
(+105 files in other folders)
